# Hanfu

./: .gitignore  README.md  SECURITY.md  benchmarking  looping.lo1
.github/: FUNDING.yml
.github/workflows/: ci.yaml
.sqlx/: query-050b14644f4a35b5637dd5fc1f4d7c191f7e33874ae55338859b8eefe678ec17.json
front/: package-lock.json  package.json
front/src/: main.ts
server/: Cargo.toml
server/assets/: hello.sql
server/db/migrations/: 20250115132455_initial.sql  20250115132457_create_upload_sessions.down.sql  20250115132457_create_upload_sessions.up.sql  20250614124059_add_upload_fields_to_files.down.sql  20250614124059_add_upload_fields_to_files.up.sql  20250614151943_clear_old_upload_data.down.sql  20250614151943_clear_old_upload_data.up.sql  20250615154501_add_iv_total_size_files.down.sql  20250615154501_add_iv_total_size_files.up.sql
server/src/: authorization.rs  config.rs  errors.rs  main.rs  scheduler.rs
server/src/models/: file.rs  mod.rs  upload_sessions.rs  user.rs
server/src/routers/: files.rs  mod.rs  upload.rs
server/src/services/: encryption.rs
test/: upload_file.js
