[package]
name = "server"
version = "0.1.0"
edition = "2021"

authors = ["Cédric Colin <cedric.colin35@gmail.com>"]
readme = "README.md"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets", "uuid"] }
clap = { version = "4.5.16", features = ["derive"] }
clap_derive = "4.5.13"
toml = "0.8.19"
serde = { version = "1.0.208", features = ["derive"] }

sha2 = "0.10.8"
aes-gcm = "0.10.3"

chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
thiserror = "2.0.11"

rocket_db_pools = { version = "0.2.0", features = ["sqlx_mysql", "sqlx"] }
sqlx = { version = "0.7.4", features = ["default", "sqlite", "sqlx-sqlite", "runtime-tokio-native-tls"] }

dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
argon2 = { version = "0.5.3", features = ["default", "password-hash", "rand", "std"] }

color-eyre = { version = "0.6.3", features = ["default", "capture-spantrace", "color-spantrace"] }
uuid = { version = "1.10.0", features = ["fast-rng"] }