[package]
name = "server"
version = "0.1.0"
edition = "2024"

authors = ["Cédric Colin <cedric.colin35@gmail.com>"]
readme = "README.md"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "uuid"] }
clap = { version = "4.5.16", features = ["derive"] }
clap_derive = "4.5.13"
toml = "0.8.19"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0", features = ["default"] }
serde_repr = "0.1.20"

tokio = { version = "1.45.1", features = ["full"] }
tokio-cron-scheduler = "0.14.0"

sha2 = "0.10.8"
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
hex = "0.4"
rand = "0.9"
cipher = "0.4.4"

chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
thiserror = "2.0.11"

rocket_db_pools = { version = "0.2.0", features = ["sqlx_mysql", "sqlx"] }
sqlx = { version = "0.7", features = ["default", "sqlite", "sqlx-sqlite", "runtime-tokio-native-tls", "chrono"] }

dotenv = "0.15.0"
jwt = "0.16.0"
argon2 = { version = "0.5.3", features = ["default", "password-hash", "rand", "std"] }

color-eyre = { version = "0.6.3", features = ["default", "capture-spantrace", "color-spantrace"] }
uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }
pbkdf2 = "0.12.2"

mime_guess = "2.0.5"